k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ace-s2i
  name: ace-s2i
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 7800
      targetPort: 7800
  selector:
    app: ace-s2i
