k8s/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: ace-s2i
  name: ace-s2i-route
spec:
  port:
    targetPort: 7800
  to:
    kind: Service
    name: ace-s2i
